--- a/app/dbt/config/jsonschema/dbt-run.yml
+++ b/app/dbt/config/jsonschema/dbt-run.yml
@@ -1,6 +1,6 @@
-$id: "dbt-test-schema"
+$id: "dbt-run-schema"
 type: object
-description: Flags for dbt test command
+description: Flags for dbt run command
 additionalProperties: false
 allOf:
   - $ref: dbt-shared-schema
@@ -13,19 +13,27 @@ allOf:
         description: Specify the nodes to exclude
       profiles_dir:
         type: string
-        format: path
-        custom/path/ftype: directory
+        coerce: directory
         description: >
           Directory containing profiles.yml file. If not set, dbt will look
           in the current working directory first, then
           HOME/.dbt/
       project_dir:
         type: string
-        format: path
-        custom/path/ftype: directory
+        coerce: directory
         description: >
           Directory containing dbt_project.yml file. Default is the current working
           directory and its parents.
+      exclude:
+        type: array
+        items:
+          type: string
+        description: Specify the nodes to exclude
+      full_refresh:
+        type: boolean
+        description: >
+          Drop incremental models and fully-recalculate the incremental
+          table from the model definition.
       select:
         type: array
         items:
@@ -34,12 +42,9 @@ allOf:
       selector:
         type: string
         description: The selector name to use from selectors.yml
-      store_failures:
-        type: boolean
-        description: Store test results (failing rows) in the database
       target_path:
         type: string
-        format: path
+        coerce: directory
         description: >
           Configure the 'target-path'. Only applies this setting for the current run.
           Overrides the 'DBT_TARGET_PATH' if it is set.
