--- a/app/dbt/config/jsonschema/dbt-test.yml
+++ b/app/dbt/config/jsonschema/dbt-test.yml
@@ -1,6 +1,6 @@
-$id: "dbt-snapshot-schema"
+$id: "dbt-test-schema"
 type: object
-description: Flags for dbt snapshot command
+description: Flags for dbt test command
 additionalProperties: false
 allOf:
   - $ref: dbt-shared-schema
@@ -13,16 +13,14 @@ allOf:
         description: Specify the nodes to exclude
       profiles_dir:
         type: string
-        format: path
-        custom/path/ftype: directory
+        coerce: directory
         description: >
           Directory containing profiles.yml file. If not set, dbt will look
           in the current working directory first, then
           HOME/.dbt/
       project_dir:
         type: string
-        format: path
-        custom/path/ftype: directory
+        coerce: directory
         description: >
           Directory containing dbt_project.yml file. Default is the current working
           directory and its parents.
@@ -34,9 +32,12 @@ allOf:
       selector:
         type: string
         description: The selector name to use from selectors.yml
+      store_failures:
+        type: boolean
+        description: Store test results (failing rows) in the database
       target_path:
         type: string
-        format: path
+        coerce: directory
         description: >
           Configure the 'target-path'. Only applies this setting for the current run.
           Overrides the 'DBT_TARGET_PATH' if it is set.
