--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,7 +22,7 @@ uvicorn = "^0.32.1"
 pyyaml = "^6.0.2"
 deepmerge = "^2.0"
 convert-case = "^1.2.3"
-jsonschema = "^4"
+cerberus = "^1.3.5"
 
 [tool.poetry.group.dev.dependencies]
 autoflake = "^2.3.1"
